mainTemplate.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#", 
  "contentVersion": "1.0.0.0", 
  "parameters": {
    "baseResourceName": {
      "type": "string",
      "metadata": {
        "description": "Base name that is used to form the names of Verisign DNS Firewall resources."
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "User name for the Virtual Machines."
      }
    },
    "adminAuthType": {
      "type": "string",
      "metadata": {
        "description": "Type of authentication."
      },
      "allowedValues": [
        "password",
        "sshPublicKey"
      ]
    },
    "adminPassword": {
      "type": "securestring",
      "defaultValue": "",
      "metadata": {
        "description": "Password for the Virtual Machines."
      }
    },
    "adminSshPublicKey": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "sshPublicKey for the Virtual Machines."
      }
    },
    "accountToken": {
      "type": "string",
      "metadata": {
        "description": "Account token from the DNS Firewall portal."
      }
    },
    "customerId": {
      "type": "string",
      "metadata": {
        "description": "Customer ID from Verisign customer service."
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_DS2_V2",
      "metadata": {
        "description": "Size of the Virtual Machines."
      }
    },
    "vnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of the vnet in which the Virtual Machines will be deployed."
      }
    },
    "vnetNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": ["new",
      "existing"],
      "metadata": {
        "Description": "New or existing Virtual Network"
      }
    },
    "vnetRGName": {
      "type": "string",
      "metadata": {
        "Description": "Resource Group Name of the existing Virtual Network"
      }
    }, 
    "vnetPrefix": {
      "type": "string",
      "defaultValue" : "notgivenforexistingvnet", 
      "metadata": {
        "description": "Prefix for the vnet."
      }
    },
    "recForwarderSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of the subnet in which the Virtual Machines will be deployed."
      }
    },
    "recForwarderSubnetPrefix": {
      "type": "string", 
      "metadata": {
        "description": "Subnet prefix for subnet in which the Virtual Machines will be deployed."
      }
    },
    "storName": {
      "type": "string",
      "metadata": {
        "description": "Storage Account name."
      }
    },
    "storNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "allowedValues": ["new",
      "existing"],
      "metadata": {
        "Description": "New or existing Storage Account."
      }
    },
    "storType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "metadata": {
        "description": "Storage type."
      }
    },
    "storRG": {
      "type": "string",
      "metadata": {
        "Description": "Resource Group Name of the existing Storage Account"
      }
    }, 
    "artifactsBaseUrl": {
      "type": "string",
      "metadata": {
         "description": "Base URL of the solution template gallery package"
      }
    },
    "location": {
      "type": "string",
      "metadata": {
         "description": "Location of deployment."
      }
    }
  },
  "variables": {
    "osProfile_recforwarder0Password": {
      "adminPassword": "[parameters('adminPassword')]",
      "adminUsername": "[parameters('adminUsername')]",
      "computerName": "[concat(parameters('baseResourceName'), '-', 'vm0')]"
    },
    "osProfile_recforwarder0sshPublicKey": {
      "adminUsername": "[parameters('adminUsername')]",
      "computerName": "[concat(parameters('baseResourceName'), '-', 'vm0')]",
      "linuxConfiguration": {
        "disablePasswordAuthentication": "true",
        "ssh": {
          "publicKeys": [ {
              "keyData": "[parameters('adminSshPublicKey')]",
              "path": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]"
            }
          ]
        }
      }
    },
    "osProfile_recforwarder0": "[variables(concat('osProfile_recforwarder0', parameters('adminAuthType')))]", 
    "osProfile_recforwarder1Password": {
      "adminPassword": "[parameters('adminPassword')]",
      "adminUsername": "[parameters('adminUsername')]",
      "computerName": "[concat(parameters('baseResourceName'), '-', 'vm1')]"
    },
    "osProfile_recforwarder1sshPublicKey": {
      "adminUsername": "[parameters('adminUsername')]",
      "computerName": "[concat(parameters('baseResourceName'), '-', 'vm1')]",
      "linuxConfiguration": {
        "disablePasswordAuthentication": "true",
        "ssh": {
          "publicKeys": [ {
              "keyData": "[parameters('adminSshPublicKey')]",
              "path": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]"
            }
          ]
        }
      }
    },
    "osProfile_recforwarder1": "[variables(concat('osProfile_recforwarder1', parameters('adminAuthType')))]", 
    "OSDiskName_base": "[concat(parameters('baseResourceName'), 'vmdisk')]",
    "vnetTemplateUrl": "[concat(parameters('artifactsBaseUrl'),'/','vnet-',parameters('vnetNewOrExisting'),'.json')]",
    "storTemplateUrl": "[concat(parameters('artifactsBaseUrl'),'/','stor-',parameters('storNewOrExisting'),'.json')]",
    "dynamicToStaticTemplatUrl": "[concat(parameters('artifactsBaseUrl'),'/update-nic.json')]",
    "configureScriptUrl": "[concat(parameters('artifactsBaseUrl'),'/', 'configure.py')]",
    "vmName_base": "[concat(parameters('baseResourceName'), '-', 'vm')]",
    "networkInterfaceName_base": "[concat(parameters('baseResourceName'),'-', 'nicfw')]",
    "loadBalancer_name": "[concat(parameters('baseResourceName'),'-', 'lb')]",
    "publicIPAddress_name": "[concat(parameters('baseResourceName'), '-', 'dns', '-', 'publicip')]",
    "availabilitySet_name": "[concat(parameters('baseResourceName'), '-', 'aset')]",
    "networkSecurityGroup_name": "[concat(parameters('baseResourceName'), '-', 'nsg')]"
  }, 
  "resources": [
    {
      "name": "NewOrExistingVnet", 
      "type": "Microsoft.Resources/deployments", 
      "apiVersion": "2016-09-01", 
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('vnetTemplateUrl')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "vnetName": {
            "value": "[parameters('vnetName')]"
          },
          "vnetRG": {
            "value": "[parameters('vnetRGName')]"
          },
          "vnetPrefix": {
            "value": "[parameters('vnetPrefix')]"
          },
          "recForwarderSubnetName": {
            "value": "[parameters('recForwarderSubnetName')]"
          },
          "recForwarderSubnetPrefix": {
            "value": "[parameters('recForwarderSubnetPrefix')]"
          }
        }
      }
    },
    {
      "name": "NewOrExistingStor",
      "type": "Microsoft.Resources/deployments", 
      "apiVersion": "2016-09-01", 
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('storTemplateUrl')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "storName": {
            "value": "[parameters('storName')]"
          },
          "storType": {
            "value": "[parameters('storType')]"
          },
          "storRG": {
            "value": "[parameters('storRG')]"
          }
        }
      }
    },
    {
      "name": "[variables('availabilitySet_name')]", 
      "type": "Microsoft.Compute/availabilitySets", 
      "apiVersion": "2017-03-30", 
      "location": "[parameters('location')]",
      "sku": {
        "name": "Classic"
      }, 
      "properties": {
        "platformFaultDomainCount": 2, 
        "platformUpdateDomainCount": 5
      }
    }, 
    {
      "name": "[variables('publicIPAddress_name')]", 
      "type": "Microsoft.Network/publicIPAddresses", 
      "apiVersion": "2017-07-01", 
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/', 'NewOrExistingVNet')]"
      ], 
      "properties": {
        "publicIPAllocationMethod": "Dynamic", 
        "idleTimeoutInMinutes": 4
      } 
    }, 
    {
      "name": "[variables('networkSecurityGroup_name')]", 
      "type": "Microsoft.Network/networkSecurityGroups", 
      "apiVersion": "2017-06-01",
      "location": "[parameters('location')]", 
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/', 'NewOrExistingVNet')]"
      ], 
      "properties": {
        "securityRules": [
          {
            "name": "AllowAllIncomingFromVnet", 
            "properties": {
              "access": "Allow", 
              "direction": "Inbound", 
              "protocol": "*", 
              "priority": 100, 
              "destinationPortRange": "*", 
              "sourceAddressPrefix": "VirtualNetwork", 
              "destinationAddressPrefix": "VirtualNetwork", 
              "sourcePortRange": "*"
            }
          },
          {
            "name": "AllowDnsUdpOut", 
            "properties": {
              "access": "Allow", 
              "direction": "Outbound", 
              "protocol": "UDP", 
              "priority": 100, 
              "destinationPortRange": "53", 
              "sourceAddressPrefix": "VirtualNetwork", 
              "destinationAddressPrefix": "Internet", 
              "sourcePortRange": "*"
            }
          }, 
          {
            "name": "AllowDnsTcpOut", 
            "properties": {
              "access": "Allow", 
              "direction": "Outbound", 
              "protocol": "TCP", 
              "priority": 200, 
              "destinationPortRange": "53", 
              "sourceAddressPrefix": "VirtualNetwork", 
              "destinationAddressPrefix": "Internet", 
              "sourcePortRange": "*"
            }
          }, 
          {
            "name": "AllowLumberjackOut", 
            "properties": {
              "access": "Allow", 
              "direction": "Outbound", 
              "protocol": "TCP", 
              "priority": 300, 
              "destinationPortRange": "5043", 
              "sourceAddressPrefix": "VirtualNetwork", 
              "destinationAddressPrefix": "Internet", 
              "sourcePortRange": "*"
            }
          },
          {
            "name": "AllowHttpsOut", 
            "properties": {
              "access": "Allow", 
              "direction": "Outbound", 
              "protocol": "TCP", 
              "priority": 400, 
              "destinationPortRange": "443", 
              "sourceAddressPrefix": "VirtualNetwork", 
              "destinationAddressPrefix": "Internet", 
              "sourcePortRange": "*"
            }
          }
        ]
      } 
    }, 
    {
      "name": "[variables('loadBalancer_name')]", 
      "type": "Microsoft.Network/loadBalancers", 
      "apiVersion": "2017-06-01", 
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddress_name'))]"
      ], 
      "properties": {
        "outboundNatRules": [], 
        "backendAddressPools": [
          {
            "name": "dnsBackendPool"
          }
        ], 
        "frontendIPConfigurations": [
          {
            "name": "dnsFrontPool", 
            "properties": {
              "privateIPAllocationMethod": "Dynamic", 
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddress_name'))]"
              }
            }
          }
        ], 
        "inboundNatRules": [
          {
            "name": "inboundSsh0",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('loadBalancer_name')), '/frontendIPConfigurations/dnsFrontPool')]"
              },
              "frontendPort": 50000,
              "backendPort": 22,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 4,
              "protocol": "Tcp"
            }
          },
          {
            "name": "inboundSsh1",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('loadBalancer_name')), '/frontendIPConfigurations/dnsFrontPool')]"
              },
              "frontendPort": 50001,
              "backendPort": 22,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 4,
              "protocol": "Tcp"
            }
          }
        ] 
      } 
    }, 
    {
      "name": "[concat(variables('networkInterfaceName_base'), copyIndex())]", 
      "type": "Microsoft.Network/networkInterfaces", 
      "apiVersion": "2017-06-01", 
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroup_name'))]",
        "[concat('Microsoft.Network/loadBalancers/', variables('loadBalancer_name'))]"
      ], 
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup_name'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[concat(resourceId(parameters('vnetRGName'), 'Microsoft.Network/virtualNetworks', parameters('vnetName')), '/subnets/', parameters('recForwarderSubnetName'))]"
              }, 
              "loadBalancerBackendAddressPools": [
                {
                  "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('loadBalancer_name')), '/backendAddressPools/dnsBackendPool')]"
                }
              ],
              "loadBalancerInboundNatRules": [
                {
                  "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('loadBalancer_name')), '/inboundNatRules/inboundSsh', copyIndex())]"
                }
              ]
            }
          }
        ], 
        "dnsSettings": {
          "dnsServers": []
        }
      },
      "copy": {
        "name": "nicCopy",
        "count": 2
      } 
    }, 
    {
      "name": "[concat(variables('vmName_base'), copyIndex())]", 
      "type": "Microsoft.Compute/virtualMachines", 
      "apiVersion": "2017-03-30", 
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('networkInterfaceName_base'), copyIndex()))]", 
        "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySet_name'))]",
        "[concat('Microsoft.Resources/deployments/', 'NewOrExistingStor')]"
      ], 
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySet_name'))]"
        }, 
        "storageProfile": {
          "imageReference": {
            "sku": "7.3", 
            "publisher": "OpenLogic", 
            "version": "latest", 
            "offer": "CentOS"
          }, 
          "osDisk": {
            "vhd": {
              "uri": "[concat('http://', parameters('storName'), '.blob.core.windows.net/vhds/', variables('OSDiskName_base'), copyIndex(), '.vhd')]"
            }, 
            "createOption": "FromImage",
            "name": "osdisk1",
            "caching": "ReadWrite"
          }, 
          "dataDisks": []
        }, 
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('networkInterfaceName_base'), copyIndex()))]" 
            } 
          ]
        }, 
        "osProfile": "[variables(concat('osProfile_recforwarder', copyIndex()))]"
      },
      "copy": {
        "name": "vmCopy",
        "count": 2
      } 
    }, 
    {
      "type": "Microsoft.Resources/deployments",
      "name": "[concat('MakeIpOf', variables('networkInterfaceName_base'), copyIndex(), 'Static')]",
      "apiVersion": "2016-09-01",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName_base'), copyIndex())]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('dynamicToStaticTemplatUrl')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "nicName": {
            "value": "[concat(variables('networkInterfaceName_base'), copyIndex())]"
          },
          "subnetRef": {
            "value": "[concat(resourceId(parameters('vnetRGName'), 'Microsoft.Network/virtualNetworks/', parameters('vnetName')), '/subnets/', parameters('recForwarderSubnetName'))]"
          },
          "privateIp": {
            "value": "[reference(concat('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName_base'), copyIndex())).ipConfigurations[0].properties.privateIPAddress]"
          },
          "networkSecurityGroupName": {
            "value": "[variables('networkSecurityGroup_name')]"
          },
          "loadBalancerBackendAddressPool": {
            "value": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('loadBalancer_name')), '/backendAddressPools/dnsBackendPool')]"
          },
          "loadBalancerInboundNatRules": {
            "value": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('loadBalancer_name')), '/inboundNatRules/inboundSsh', copyIndex())]"
          }
        } 
      },
      "copy": {
        "name": "nicUpdate",
        "count": 2
      }
    },
    {
      "name": "[concat(variables('vmNameBase'), copyIndex(), '/configure.py')]",
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2017-03-30",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', variables('vmNameBase'), copyIndex())]"
      ],
      "comments": "The script to install bind, and the appliance components, on the forwarders.  If this step fails, check in the logs in /var/log/waagent.log and /var/log/azure/* for details",
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.0",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[variables('configureScriptUrl')]"
          ],
          "commandToExecute": "[concat('python configure.py -s ', parameters('recForwarderSubnetPrefix'), ' -c ', parameters('customerId'), ' -a ', parameters('accountToken'))]"
        }
      },
      "copy": {
        "name": "configure",
        "count": 2
      }
    }
  ],
  "outputs": {
    "forwarder1Ip": {
      "type": "string",
      "value": "[reference(concat(variables('networkInterfaceName_base'), '0').ipConfigurations[0].properties.privateIPAddress]"
    },
    "forwarder2Ip": {
      "type": "string",
      "value": "[reference(concat(variables('networkInterfaceName_base'), '1').ipConfigurations[0].properties.privateIPAddress]"
    }
  }
}
